[package]
name = "adventofcode-2025"
version = "0.1.0"
authors = ["Giacomo Stevanato <giaco.stevanato@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-helper = { git = "https://github.com/SkiFire13/adventofcode-helper-rs" }
